lab1/test/fails/brznp_err2.asm
        .orig x3000
		brznp LABEL
LABEL	halt		
		.end